<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_illumination</name>
  <version>1.0.0</version>
  <description>Service to control UGV lights.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_ugv</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_msgs</depend>
  <depend>fkie_iop_accesscontrol</depend>
  <depend>fkie_iop_component</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
