<?xml version="1.0"?>
<package format="2">
  <name>fkie_iop_platform_specification</name>
  <version>1.0.0</version>
  <description>Povides information on the mobility 
        and geometric characteristics of the platform to IOP.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_ugv</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>fkie_iop_events</depend>
  <depend>fkie_iop_component</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
