<?xml version="1.0"?>
<package format="3">
  <name>fkie_iop_power_plant</name>
  <version>1.0.0</version>
  <description>Service to forward battary status to IOP.</description>

  <author>Alexander Tiderko</author>
  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_ugv</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fkie_iop_accesscontrol</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
