<?xml version="1.0"?>
<package>
  <name>iop_stabilizer_driver_fkie</name>
  <version>1.0.0</version>
  <description>Driver to control flipper of the a robot plattform.</description>

  <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
  <license>GPLv2</license>
  <url type="website">https://github.com/fkie/iop_jaus_ugv</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iop_management_fkie</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>iop_component_fkie</run_depend>
  <run_depend>iop_management_fkie</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
  </export>

</package>
